# single-player-fighting-game

./: CMakeLists.txt  LICENSE  README.md
include/: Vector2.h  animation.h  atlas.h  camera.h  character.h  collision_box.h  collision_layer.h  game.h  state_node.h  timer.h
include/enemy/: barb.h  enemy.h  enemy_state_node.h  sword.h
include/manager/: bullet_time_manager.h  character_manager.h  collision_manager.h  resource_manager.h  state_machine.h
include/player/: player.h  player_state_node.h
src/: animation.cpp  atlas.cpp  camera.cpp  character.cpp  collision_box.cpp  game.cpp  main.cpp  timer.cpp
src/enemy/: barb.cpp  enemy.cpp  enemy_state_node.cpp  sword.cpp
src/manager/: bullet_time_manager.cpp  character_manager.cpp  collision_manager.cpp  resource_manager.cpp  state_machine.cpp
src/player/: player.cpp  player_state_node.cpp
